--- a/package.json
+++ b/package.json
@@ -22,7 +22,16 @@
     "@angular/router": "^4.0.0",
     "core-js": "^2.4.1",
     "rxjs": "^5.1.0",
-    "zone.js": "^0.8.4"
+    "zone.js": "^0.8.4",
+    "assert": "^1.4.1",
+    "body-parser": "^1.17.1",
+    "debug": "^2.6.3",
+    "express": "^4.15.2",
+    "mongodb": "^2.2.25",
+    "morgan": "^1.8.1",
+    "path": "^0.12.7",
+    "q": "^1.5.0",
+    "typescript": "^2.2.2"
   },
   "devDependencies": {
     "@angular/cli": "1.0.4",
